[gd_scene load_steps=6 format=3 uid="uid://b5gnugdcynclf"]

[ext_resource type="Script" path="res://character/scripts/start_screen.gd" id="1_5tk47"]
[ext_resource type="FontFile" uid="uid://cvtkhuaoexv1w" path="res://ttfs/Minecraft.ttf" id="1_t25xb"]
[ext_resource type="Texture2D" uid="uid://ckmc5vxv6lgha" path="res://Alterções caua/kpa.png" id="2_etyxv"]
[ext_resource type="AudioStream" uid="uid://ctabg3puo5bv6" path="res://efeitos sonoros/trilha zumbi .wav" id="4_5eol7"]

[sub_resource type="Theme" id="Theme_cbj6h"]

[node name="startScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5tk47")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = -125.0
offset_bottom = -492.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.380392, 0.729412, 0.843137, 0)

[node name="bg" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/bg"]

[node name="Sprite2D5" type="Sprite2D" parent="ColorRect/bg"]
position = Vector2(384, 417)
scale = Vector2(1.05096, 1.13973)
texture = ExtResource("2_etyxv")

[node name="controls" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 237.0
offset_right = 165.5
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2

[node name="startBtn" type="Button" parent="ColorRect/controls"]
layout_mode = 2
focus_neighbor_top = NodePath("../quitBtn")
theme = SubResource("Theme_cbj6h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_fonts/font = ExtResource("1_t25xb")
theme_override_font_sizes/font_size = 40
text = "Começar"

[node name="controlsBtn" type="Button" parent="ColorRect/controls"]
layout_mode = 2
theme = SubResource("Theme_cbj6h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_fonts/font = ExtResource("1_t25xb")
theme_override_font_sizes/font_size = 40
text = "Controles"

[node name="quitBtn" type="Button" parent="ColorRect/controls"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../startBtn")
theme = SubResource("Theme_cbj6h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.756863, 0.121569, 1)
theme_override_fonts/font = ExtResource("1_t25xb")
theme_override_font_sizes/font_size = 40
text = " Sair"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 3)
format = 2

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5eol7")
autoplay = true

[connection signal="pressed" from="ColorRect/controls/startBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="ColorRect/controls/controlsBtn" to="." method="_on_controls_btn_pressed"]
[connection signal="pressed" from="ColorRect/controls/quitBtn" to="." method="_on_quit_btn_pressed"]
